--- a/src/global.scss
+++ b/src/global.scss
@@ -1,3 +1,8 @@
+* {
+  box-sizing: border-box;
+  position: relative;
+}
+
 html {
   font-family: 'Roboto', sans-serif;
 }
@@ -5,4 +10,5 @@ html {
 body {
   font-size: 13px;
   line-height: 20px;
+  margin: 0;
 }
